--- a/data_retriever.ipynb
+++ b/data_retriever.ipynb
@@ -16,7 +16,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\valen\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: C:\\Users\\valen\\.cache\\kagglehub\\datasets\\raedaddala\\imdb-movies-from-1960-to-2023\\versions\\4\n"
+     ]
+    }
+   ],
    "source": [
     "import kagglehub\n",
     "\n",
